k8s/applications/media/arr/radarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  namespace: arr
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/part-of: applications
    app.kubernetes.io/managed-by: argocd
spec:
  serviceName: radarr
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: config
        backup.velero.io/backup-volumes-excludes: media,tmp,run
      labels:
        app: radarr
        app.kubernetes.io/name: radarr
        app.kubernetes.io/part-of: applications
        app.kubernetes.io/managed-by: argocd
    spec:
      hostNetwork: false
      hostPID: false
      hostIPC: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-share
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: run
          emptyDir:
            sizeLimit: 100Mi
      containers:
        - name: radarr
          image: ghcr.io/vegops/radarr:6.2.1.10461-r0@sha256:7cf5a6d3bd03ba97fc983280b23ec65006a5cc71f3f09804c05a7658ae5f0a4c
          ports:
            - name: http
              containerPort: 7878
          volumeMounts:
            - name: config
              mountPath: /radarr/data
            - name: media
              mountPath: /data
            - name: tmp
              mountPath: /tmp
            - name: run
              mountPath: /run
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /
              port: 7878
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 7878
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "proxmox-csi"
        resources:
          requests:
            storage: 4Gi
