k8s/applications/media/arr/radarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: arr
spec:
  clusterIP: None
  type: ClusterIP
  selector:
    app: radarr
  ports:
    - name: radarr-web
      port: 80
      targetPort: http
