k8s/applications/media/arr/radarr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: arr
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - 'radarr.k8s.eudald.gr'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: radarr
          port: 80
